fixed size of the planet and user entry cards on mobile

--- a/the-planets/src/components/Shared/Box.css
+++ b/the-planets/src/components/Shared/Box.css
@@ -72,7 +72,7 @@
   .card {
     height: 100% !important;
     width: 100% !important;
-    margin: 30px 75px;
+    margin: 30px 45px;
   }
 
   .card .card-img-top {
